Fix svg selector block bottom spacing

--- a/src/blocks/svg-selector/block.css
+++ b/src/blocks/svg-selector/block.css
@@ -1,5 +1,6 @@
 .wp-block-hrswds-svg-selector {
 	box-sizing: border-box;
+	line-height: 0;
 
 	&.has-text-color svg {
 		fill: currentcolor;
